--- a/webresponsiva CV/cv.html
+++ b/webresponsiva CV/cv.html
@@ -6,6 +6,7 @@
     <title>CV</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
 <div class="wrapper">
     <div class="item1">
       <h1>Marta López Urbano</h1>
@@ -59,4 +60,5 @@
     </ul>
     </div>
     </div>
+</body>
 </html>
