--- a/webresponsiva CV/cv.html
+++ b/webresponsiva CV/cv.html
@@ -49,16 +49,48 @@
             <p>Septiembre 2015-Junio 2019</p>
           </li>
         </ul>
-     
+        <h2>Idiomas</h2>
+        <ul>
+            <li>Español:Nativo</li>
+            <li>Inglés:Nivel intermedio</li>
+        </ul>
     </div>
 
-    <div class="item9">
-    <h2>Idiomas</h2>
-    <ul>
-        <li>Español:Nativo</li>
-        <li>Inglés:Nivel intermedio</li>
-    </ul>
-    </div>
-    </div>
+<div class="modulos">
+    <h2>Módulos de 1º DAM</h2>
+    <table>
+        <tr>
+            <th>Nombre del Módulo</th>
+            <th>Horas Semanales</th>
+        </tr>
+        <tbody>
+        <tr>
+            <td>Programación</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <td>Base de Datos</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>Entornos de desarrollo</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>Sistemas Informáticos</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>FOL</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>Lenguaje de Marcas</td>
+            <td>4</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+</div>
 </body>
 </html>
