--- a/webresponsiva CV/cv.html
+++ b/webresponsiva CV/cv.html
@@ -4,50 +4,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="menu">
+    <ul>
+        <li><a href="#experiencia">Experiencia Laboral</a></li>
+        <li><a href="#educacion">Educación</a></li>
+        <li><a href="#datos">Datos Personales</a></li>
+    </ul>
+</div>
+
 <div class="wrapper">
     <div class="item1">
-      <h1>Marta López Urbano</h1>
+        <h1>Marta López Urbano</h1>
         <h2>Mi perfil</h2>
         <p>Soy una persona responsable y cumplidora con el trabajo que tengo que realizar.A destacar mis ganas de aprender y formarme.</p>
 
         <h2>Información</h2>
         <ul>
-          <li>Disponibilidad para desplazarme</li>
+            <li>Disponibilidad para desplazarme</li>
         </ul>
-        
+
         <h2>Contacto</h2>
         <ul>
-          <li>Contacto:maartaaloopez14@gmail.com</li>
-          <li>Teléfono:639215366</li>
+            <li>Contacto:maartaaloopez14@gmail.com</li>
+            <li>Teléfono:639215366</li>
         </ul>
-      
+
     </div>
     <div class="item4">
         <h2>Estudios en desarrollo</h2>
         <ul>
             <li>
-              <h3>Grado superior en desarrollo de aplicaciones multiplataforma</h3>
-              <p>I.E.S Francisco de los Ríos (Fernán Núñez)</p>
-              <p>Septiembre 2022</p>
+                <h3>Grado superior en desarrollo de aplicaciones multiplataforma</h3>
+                <p>I.E.S Francisco de los Ríos (Fernán Núñez)</p>
+                <p>Septiembre 2022</p>
             </li>
-          </ul>
+        </ul>
         <h2>Formación académica</h2>
         <ul>
-          <li>
-            <h3>Bachillerato</h3>
-            <p>I.E.S Inca Garcilaso (Montilla)</p>
-            <p>Septiembre 2019-Junio 2021</p>
-          </li>   
+            <li>
+                <h3>Bachillerato</h3>
+                <p>I.E.S Inca Garcilaso (Montilla)</p>
+                <p>Septiembre 2019-Junio 2021</p>
+            </li>
         </ul>
         <ul>
-          <li>
-            <h3>Educación Secundaria Obligatoria </h3>
-            <p>I.E.S Inca Garcilaso (Montilla)</p>
-            <p>Septiembre 2015-Junio 2019</p>
-          </li>
+            <li>
+                <h3>Educación Secundaria Obligatoria </h3>
+                <p>I.E.S Inca Garcilaso (Montilla)</p>
+                <p>Septiembre 2015-Junio 2019</p>
+            </li>
         </ul>
         <h2>Idiomas</h2>
         <ul>
@@ -55,42 +63,64 @@
             <li>Inglés:Nivel intermedio</li>
         </ul>
     </div>
+<div class="i1">
+    <h2 id="experiencia">Experiencia Laboral</h2>
+    <h3>No tengo experiencia laboral</h3>
+</div>
+    <div class="i2">
+    <h2 id="educacion">Educación</h2> <h2>Estudios en desarrollo</h2>
+                <h3>Grado superior en desarrollo de aplicaciones multiplataforma</h3>
+                <p>I.E.S Francisco de los Ríos (Fernán Núñez)</p>
+                <p>Septiembre 2022</p>
+        <h2>Formación académica</h2>
+                <h3>Bachillerato</h3>
+                <p>I.E.S Inca Garcilaso (Montilla)</p>
+                <p>Septiembre 2019-Junio 2021</p>
+                <h3>Educación Secundaria Obligatoria </h3>
+                <p>I.E.S Inca Garcilaso (Montilla)</p>
+                <p>Septiembre 2015-Junio 2019</p>
+    </div>
+    <div class="i3">
+    <h2 id="datos">Datos Personales</h2>
+            <p>Contacto:maartaaloopez14@gmail.com</p>
+            <p>Teléfono:639215366</p>
+    </div>
+    <div class="modulos">
+        <h2>Módulos de 1º DAM</h2>
+        <table>
+            <tr>
+                <th>Nombre del Módulo</th>
+                <th>Horas Semanales</th>
+            </tr>
+            <tbody>
+            <tr>
+                <td>Programación</td>
+                <td>8</td>
+            </tr>
+            <tr>
+                <td>Base de Datos</td>
+                <td>6</td>
+            </tr>
+            <tr>
+                <td>Entornos de desarrollo</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>Sistemas Informáticos</td>
+                <td>6</td>
+            </tr>
+            <tr>
+                <td>FOL</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>Lenguaje de Marcas</td>
+                <td>4</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 
-<div class="modulos">
-    <h2>Módulos de 1º DAM</h2>
-    <table>
-        <tr>
-            <th>Nombre del Módulo</th>
-            <th>Horas Semanales</th>
-        </tr>
-        <tbody>
-        <tr>
-            <td>Programación</td>
-            <td>8</td>
-        </tr>
-        <tr>
-            <td>Base de Datos</td>
-            <td>6</td>
-        </tr>
-        <tr>
-            <td>Entornos de desarrollo</td>
-            <td>3</td>
-        </tr>
-        <tr>
-            <td>Sistemas Informáticos</td>
-            <td>6</td>
-        </tr>
-        <tr>
-            <td>FOL</td>
-            <td>3</td>
-        </tr>
-        <tr>
-            <td>Lenguaje de Marcas</td>
-            <td>4</td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-</div>
 </body>
 </html>
